v. 0.0.8. mobile adaptation was started.

--- a/src/app/deposit-calculator/calculation-panel/calculation-panel.component.css
+++ b/src/app/deposit-calculator/calculation-panel/calculation-panel.component.css
@@ -60,3 +60,13 @@ input {
           background-color: black !important;
           opacity: 0.5;
 }
+
+.filter-button {
+          padding-top: 35px;
+          padding-bottom: 35px;
+          height: 100% !important;
+          width: 100% !important;
+          font-size: 20px;
+          color: rgb(69, 175, 189);
+          padding-left: 0 !important;
+}
