--- a/src/app/main-page/main-panel/main-panel.component.html
+++ b/src/app/main-page/main-panel/main-panel.component.html
@@ -1,13 +1,16 @@
 <div class="container">
   <div class="row">
     <div style="height:200px">
-      <div class="col-sm-4" style="border-right:1px solid;border-color:rgba(0, 0, 0, 0.1);height:100%">
+      <div class="col-sm-4 hidden-xs" style="border-right:1px solid;border-color:rgba(0, 0, 0, 0.1);height:100%">
         <div style="font-size:30px;color:rgb(69, 175, 189);margin-top:85px;margin-left:50px">
           Выбор продукта
         </div>
       </div>
 
-      <div class="col-sm-2">
+      <div class="col-xs-1 visible-xs">
+      </div>
+
+      <div class="col-xs-2">
         <button mat-button>
           <md-icon class="button-text">
             <i class="material-icons">account_balance_wallet</i>
@@ -16,7 +19,7 @@
         </button>
       </div>
 
-      <div class="col-sm-2">
+      <div class="col-xs-2">
         <button mat-button>
           <md-icon class="button-text">
             <i class="material-icons">card_giftcard</i>
@@ -25,7 +28,7 @@
         </button>
       </div>
 
-      <div class="col-sm-2">
+      <div class="col-xs-2">
         <button mat-button (click)="gotoDeposits()">
           <md-icon class="button-text">
             <i class="material-icons">attach_money</i>
@@ -34,7 +37,7 @@
         </button>
       </div>
 
-      <div class="col-sm-2">
+      <div class="col-xs-2">
         <button mat-button>
           <md-icon class="button-text">
             <i class="material-icons">timeline</i>
