--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <app-header></app-header>
 </div>
 
-<div class="hidden-xs" style="position:absolute;z-index:10;">
+<div style="position:absolute;z-index:10;">
     <app-carousel></app-carousel>
 </div>
 
