--- a/src/app/deposit-calculator/deposit-calculator.component.html
+++ b/src/app/deposit-calculator/deposit-calculator.component.html
@@ -15,12 +15,12 @@
                         {{d.rate}}
                     </div>
                     <div class="col-sm-2 calculation">
-                        {{d.income}}
+                        {{d.profit}}
                     </div>
-                    <div class="col-sm-3 calculation">
+                    <div class="col-sm-2 calculation">
                         {{d.amountAfterPeriod}}
                     </div>
-                    <div class="col-sm-1 calculation">
+                    <div class="col-sm-2 calculation">
                         {{d.capital}}
                     </div>
                     <div class="col-sm-1 calculation">
