--- a/src/app/deposit-calculator/deposit-calculator.component.css
+++ b/src/app/deposit-calculator/deposit-calculator.component.css
@@ -13,7 +13,7 @@ ul {
 }
 
 .deposits li:hover {
-          background-color: rgba(69, 175, 189, 0.1);
+          background-color: rgba(69, 175, 189, 0.25);
 }
 
 .deposits .depo-title {
@@ -33,4 +33,5 @@ ul {
           margin-top: 20px;          
           font-size: medium;
           color: black;
+          text-align:center;
 }
