--- a/src/app/deposit-calculator/calculation-panel/calculation-panel.component.html
+++ b/src/app/deposit-calculator/calculation-panel/calculation-panel.component.html
@@ -112,11 +112,11 @@
 
     <div class="col-xs-6">
       <button mat-button (click)="gotoMain()" style="height:100%;padding:0;margin:0">
-        <p class="filter-button">
+        <div class="filter-button">
           Отфильтровать
-          <wbr>доступные
-          <wbr>вклады
-        </p>
+          <wbr> доступные
+          <wbr> вклады
+        </div>
       </button>
     </div>
   </div>
