--- a/src/app/deposit-calculator/calculation-panel/calculation-panel.component.css
+++ b/src/app/deposit-calculator/calculation-panel/calculation-panel.component.css
@@ -62,11 +62,14 @@ input {
 }
 
 .filter-button {
-          padding-top: 35px;
-          padding-bottom: 35px;
+          padding-top: 40px;
+          padding-bottom: 40px;
           height: 100% !important;
           width: 100% !important;
-          font-size: 20px;
+          font-size: 22px;
           color: rgb(69, 175, 189);
           padding-left: 0 !important;
+          line-height: 1;
+          word-wrap: break-word;
+	overflow-wrap: break-word;
 }
