--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,7 +31,7 @@
       </div>
       <div class="col-sm-3">
         <div style="margin-top:100%">
-          <div>dev by Yahor Pashkouski</div>
+          <!-- <div>dev by Yahor Pashkouski</div> -->
           <div>EGAR Technology Bel</div>
           <div>2017</div>
         </div>
