--- a/src/app/deposit-calculator/calculation-panel/calculation-panel.component.css
+++ b/src/app/deposit-calculator/calculation-panel/calculation-panel.component.css
@@ -24,13 +24,13 @@
 }
 
 .mat-raised-button {
-          background-color: rgb(69, 175, 189);
-          color:white;
-          box-shadow: 0;
-          border-radius: 50px;
-          height:50px;
-          width: 130px;
-          box-shadow: none;
+          /* background-color: rgb(69, 175, 189); */
+          color:white !important;
+          /* box-shadow: 0; */
+          /* border-radius: 50px; */
+          height: 100%;
+          width: 100%;
+          /* box-shadow: none; */
 }
 
 .mat-button-toggle-checked {
@@ -56,20 +56,20 @@ input {
           background-color: rgb(69, 175, 189);
 }
 
-.mat-slider-track-fill {
-          background-color: black !important;
-          opacity: 0.5;
+.filter-button {
+          font-size: 20px;
+          line-height: 1;
 }
 
-.filter-button {
-          padding-top: 40px;
-          padding-bottom: 40px;
-          height: 100% !important;
-          width: 100% !important;
-          font-size: 22px;
-          color: rgb(69, 175, 189);
-          padding-left: 0 !important;
-          line-height: 1;
-          word-wrap: break-word;
-	overflow-wrap: break-word;
+.mi-mobile {
+          padding-top:10px;
+          font-size: 30px;
+          line-height:10px
+}
+
+.th-mobile {
+          margin-top:10px;
+          font-size: medium;
+          color: white;
+          background-color: rgb(69, 175, 189);
 }
