--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,10 +3,7 @@
 </div>
 
 <div id="zenit_content_below_menu_panel" style="padding-top:0">
-    <div style="font-size:10em;margin-left:50%">:)</div>
-    <div style="font-size:4em;">
-        Тут будет содержание главной страницы. Пока работает только кнопка 
-        <span style="color:rgb(69, 175, 189)">"Вклады"</span>.
-    </div>
+    <!-- <div style="font-size:10em;margin-left:50%">:)</div> -->
+    <div>Главная страница</div>
 </div>
 
