--- a/src/app/main-page/main-panel/main-panel.component.css
+++ b/src/app/main-page/main-panel/main-panel.component.css
@@ -17,3 +17,15 @@
           font-size: 60px;
           color: rgb(69, 175, 189);
 }
+
+.mi-mobile {
+          font-size: 40px;
+          line-height:10px
+}
+
+.bt-mobile {
+          padding: 0;
+          font-size: 14px;
+          color: rgb(141, 141, 141);
+          line-height: 10px;
+}
