--- a/src/app/main-page/main-panel/main-panel.component.html
+++ b/src/app/main-page/main-panel/main-panel.component.html
@@ -1,49 +1,90 @@
 <div class="container">
-  <div class="row">
-    <div style="height:200px">
-      <div class="col-sm-4 hidden-xs" style="border-right:1px solid;border-color:rgba(0, 0, 0, 0.1);height:100%">
-        <div style="font-size:30px;color:rgb(69, 175, 189);margin-top:85px;margin-left:50px">
-          Выбор продукта
+  <div class="hidden-xs">
+    <div class="row">
+      <div style="height:200px">
+        <div class="col-sm-4" style="border-right:1px solid;border-color:rgba(0, 0, 0, 0.1);height:100%">
+          <div style="font-size:30px;color:rgb(69, 175, 189);margin-top:85px;margin-left:50px">
+            Выбор продукта
+          </div>
+        </div>
+
+        <div class="col-sm-2 menu-button">
+          <button mat-button>
+            <md-icon class="button-text">
+              <i class="material-icons">account_balance_wallet</i>
+              <div>Кредиты</div>
+            </md-icon>
+          </button>
+        </div>
+
+        <div class="col-sm-2">
+          <button mat-button>
+            <md-icon class="button-text">
+              <i class="material-icons">card_giftcard</i>
+              <div>Карты</div>
+            </md-icon>
+          </button>
+        </div>
+
+        <div class="col-sm-2 menu-button">
+          <button mat-button (click)="gotoDeposits()">
+            <md-icon class="button-text">
+              <i class="material-icons">attach_money</i>
+              <div>Вклады</div>
+            </md-icon>
+          </button>
+        </div>
+
+        <div class="col-sm-2 menu-button">
+          <button mat-button>
+            <md-icon class="button-text">
+              <i class="material-icons">timeline</i>
+              <div>Инвестиции</div>
+            </md-icon>
+          </button>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div class="col-xs-1 visible-xs">
-      </div>
+  <div class="visible-xs">
+    <div class="row" style="width:100vw">
+      <div style="height:80px;">
+        <div class="col-xs-3" style="padding:0">
+          <button mat-button style="height:80px;">
+            <md-icon class="bt-mobile">
+              <i class="material-icons mi-mobile">account_balance_wallet</i>
+              <div>Кредиты</div>
+            </md-icon>
+          </button>
+        </div>
 
-      <div class="col-xs-2">
-        <button mat-button>
-          <md-icon class="button-text">
-            <i class="material-icons">account_balance_wallet</i>
-            <div>Кредиты</div>
-          </md-icon>
-        </button>
-      </div>
+        <div class="col-xs-3" style="padding:0">
+          <button mat-button style="height:80px;">
+            <md-icon class="bt-mobile">
+              <i class="material-icons mi-mobile">card_giftcard</i>
+              <div>Карты</div>
+            </md-icon>
+          </button>
+        </div>
 
-      <div class="col-xs-2">
-        <button mat-button>
-          <md-icon class="button-text">
-            <i class="material-icons">card_giftcard</i>
-            <div>Карты</div>
-          </md-icon>
-        </button>
-      </div>
+        <div class="col-xs-3" style="padding:0">
+          <button mat-button style="height:80px;" (click)="gotoDeposits()">
+            <md-icon class="bt-mobile">
+              <i class="material-icons mi-mobile">attach_money</i>
+              <div>Вклады</div>
+            </md-icon>
+          </button>
+        </div>
 
-      <div class="col-xs-2">
-        <button mat-button (click)="gotoDeposits()">
-          <md-icon class="button-text">
-            <i class="material-icons">attach_money</i>
-            <div>Вклады</div>
-          </md-icon>
-        </button>
-      </div>
-
-      <div class="col-xs-2">
-        <button mat-button>
-          <md-icon class="button-text">
-            <i class="material-icons">timeline</i>
-            <div>Инвестиции</div>
-          </md-icon>
-        </button>
+        <div class="col-xs-3" style="padding:0">
+          <button mat-button style="height:80px;">
+            <md-icon class="bt-mobile">
+              <i class="material-icons mi-mobile">timeline</i>
+              <div>Инвестиции</div>
+            </md-icon>
+          </button>
+        </div>
       </div>
     </div>
   </div>
