--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 <carousel [interval]="interval" style="width:1920px">
   <slide>
     <div class="img-wrap">
-      <img src="assets/images/unn_skyscraper.jpg" width="100%" height="500px;" alt="First slide">
+      <img src="assets/images/7_cropped.jpg" width="100%" height="500px;" alt="First slide">
       <div id="first-slide-content">
         <div class="business-title">
           <p>
@@ -32,11 +32,9 @@
     </div>
   </slide>
   <slide>
-    <img src="assets/images/unn_skyscraper_2.jpg" width="100%" height="500px"
-      alt="Second slide">
+    <img src="assets/images/2_cropped.jpg" width="100%" height="500px;" alt="First slide">
   </slide>
   <slide>
-    <img src="assets/images/vesna_sneg_trava.jpg"
-      width="100%" height="500px" alt="Third slide">
+    <img src="assets/images/4_cropped.jpg" width="100%" height="500px" alt="Third slide">
   </slide>
 </carousel>
