--- a/src/app/deposit-calculator/calculation-panel/calculation-panel.component.html
+++ b/src/app/deposit-calculator/calculation-panel/calculation-panel.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row hidden-xs">
-    <div class="col-xs-2">
+    <div class="col-sm-2">
       <button mat-button (click)="gotoMain()" style="border-right:1px solid; border-color:rgba(0, 0, 0, 0.1);">
         <md-icon>
           <i class="material-icons" style="padding-top:50px;padding-bottom:50px;">chevron_left</i>
@@ -8,77 +8,91 @@
       </button>
     </div>
 
-    <div class="col-sm-2">
-      <div class="menu-name">
-        Валюта вклада
-      </div>
+    <div class="col-sm-10">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <div class="menu-name">
+              Валюта вклада
+            </div>
+            <div>
+              <mat-button-toggle-group [value]="currency" (change)="changeCurrency($event)">
+                <mat-button-toggle value="rub">
+                  <p style="font-size:40px;color:rgb(0, 140, 153);padding-top:10px">₽</p>
+                </mat-button-toggle>
+                <mat-button-toggle value="usd">
+                  <p style="font-size:40px;color:rgb(0, 140, 153);padding-top:10px">$</p>
+                </mat-button-toggle>
+                <mat-button-toggle value="eur">
+                  <p style="font-size:40px;color:rgb(0, 140, 153);padding-top:10px">€</p>
+                </mat-button-toggle>
+              </mat-button-toggle-group>
+            </div>
+          </div>
 
-      <div>
-        <mat-button-toggle-group [value]="currency" (change)="changeCurrency($event)">
-          <mat-button-toggle value="rub">
-            <p style="font-size:40px;color:rgb(69, 175, 189);padding-top:10px">₽</p>
-          </mat-button-toggle>
-          <mat-button-toggle value="usd">
-            <p style="font-size:40px;color:rgb(69, 175, 189);padding-top:10px">$</p>
-          </mat-button-toggle>
-          <mat-button-toggle value="eur">
-            <p style="font-size:40px;color:rgb(69, 175, 189);padding-top:10px">€</p>
-          </mat-button-toggle>
-        </mat-button-toggle-group>
-      </div>
-      <div style="margin-top:28px" pTooltip="Выплата процентов на депозит повышает доходность, но вы не сможете распоряжаться начисленными процентами до окончания срока"
-        tooltipPosition="bottom">
-        <mat-checkbox [checked]="capitalization" (change)="changeCapitalizationCheckbox($event)" color="accent">
-          <span style="margin:10px;font-weight:lighter" class="menu-name">Капитализация</span>
-        </mat-checkbox>
-      </div>
-    </div>
+          <div class="col-sm-4">
+            <div class="menu-name">
+              Сумма вклада
+            </div>
+            <div style="font-size:30px;color:rgb(0, 140, 153);width:60%">
+              <input matInput [(ngModel)]="formattedMoneyCout" (keyup)="inputMoneyCount()">
+            </div>
+            <mat-slider [min]="minMoneyCount" max="2000000" (input)="changeMoneyCount($event)" [value]="moneyCount" step="10" color="accent"></mat-slider>
+          </div>
 
-    <div class="col-sm-4">
-      <div class="menu-name">
-        Сумма вклада
-      </div>
-      <div style="font-size:30px;color:rgb(69, 175, 189);width:60%">
-        <input matInput [(ngModel)]="formattedMoneyCout" (keyup)="inputMoneyCount()">
-      </div>
-      <mat-slider [min]="minMoneyCount" max="2000000" (input)="changeMoneyCount($event)" [value]="moneyCount" step="10" color="accent"></mat-slider>
-      <div>
-        <span pTooltip="Увеличение ставки для пенсионеров" tooltipPosition="bottom">
-          <mat-checkbox [checked]="pensioner" (change)="changePensionerCheckbox($event)" color="accent">
-            <span style="margin:10px;font-weight:lighter" class="menu-name">Я пенсионер</span>
-          </mat-checkbox>
-        </span>
+          <div class="col-sm-4">
+            <div class="menu-name">
+              Срок
+            </div>
+            <div style="font-size:30px;color:rgb(0, 140, 153);">
+              {{formattedMonthCount}}
+            </div>
+            <mat-slider min="1" max="36" (input)="changeMonthCount($event)" [value]="monthCount" color="accent"></mat-slider>
+          </div>
+        </div>
 
-        <span style="margin-left:15px" pTooltip="Увеличение ставки при открытии вклада через интернет-банк" tooltipPosition="bottom">
-          <mat-checkbox [checked]="onlineopn" (change)="changeOnlineopnCheckbox($event)" color="accent">
-            <span style="margin:10px;font-weight:lighter" class="menu-name">Открыть онлайн</span>
-          </mat-checkbox>
-        </span>
-      </div>
-    </div>
+        <div class="row">
+          <div class="col-sm-2">
+            <div pTooltip="Выплата процентов на депозит повышает доходность, но вы не сможете распоряжаться начисленными процентами до окончания срока"
+              tooltipPosition="bottom">
+              <mat-checkbox [checked]="capitalization" (change)="changeCapitalizationCheckbox($event)" color="accent">
+                <span style="margin:10px;font-weight:lighter" class="menu-name">Капитализация</span>
+              </mat-checkbox>
+            </div>
+          </div>
 
-    <div class="col-sm-4">
-      <div class="menu-name">
-        Срок
-      </div>
-      <div style="font-size:30px;color:rgb(69, 175, 189);">
-        {{formattedMonthCount}}
-      </div>
-      <mat-slider min="1" max="36" (input)="changeMonthCount($event)" [value]="monthCount" color="accent"></mat-slider>
-      <div>
-        <mat-checkbox [checked]="refill" (change)="changeRefillCheckbox($event)" color="accent">
-          <span style="margin:10px;font-weight:lighter" class="menu-name">Пополнение</span>
-        </mat-checkbox>
+          <div class="col-sm-2">
+            <span pTooltip="Увеличение ставки на 0.25% для пенсионеров" tooltipPosition="bottom">
+              <mat-checkbox [checked]="pensioner" (change)="changePensionerCheckbox($event)" color="accent">
+                <span style="margin:10px;font-weight:lighter" class="menu-name">Я пенсионер</span>
+              </mat-checkbox>
+            </span>
+          </div>
 
-        <span style="margin-left:50px">
-          <mat-checkbox [checked]="withdrawal" (change)="changeWithdrawalCheckbox($event)" color="accent">
-            <span style="margin:10px;font-weight:lighter" class="menu-name">Снятие</span>
-          </mat-checkbox>
-        </span>
+          <div class="col-sm-2">
+            <span pTooltip="Увеличение ставки на 0.25% при открытии вклада через интернет-банк" tooltipPosition="bottom">
+              <mat-checkbox [checked]="onlineopn" (change)="changeOnlineopnCheckbox($event)" color="accent">
+                <span style="margin:10px;font-weight:lighter" class="menu-name">Открыть онлайн</span>
+              </mat-checkbox>
+            </span>
+          </div>
+
+          <div class="col-sm-2">
+            <mat-checkbox [checked]="refill" (change)="changeRefillCheckbox($event)" color="accent">
+              <span style="margin:10px;font-weight:lighter" class="menu-name">Пополнение</span>
+            </mat-checkbox>
+          </div>
+
+          <div class="col-sm-2">
+            <mat-checkbox [checked]="withdrawal" (change)="changeWithdrawalCheckbox($event)" color="accent">
+              <span style="margin:10px;font-weight:lighter" class="menu-name">Снятие</span>
+            </mat-checkbox>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  
+
   <div class="row table-header hidden-xs" style="height:30px">
     <div style="margin-top:5px;text-align:center">
       <div class="col-sm-4" style="text-align:left">
