--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="hidden-xs">
         <div class="col-sm-2 header-log">
-          <img src="http://toplogos.ru/images/logo-bank-zenit.png" style="height:70px;">
+          <img src="assets/images/logo-bank-zenit.png" style="height:70px;">
         </div>
 
         <div class="col-sm-8 header-button" style="padding:0">
@@ -25,7 +25,7 @@
 
       <div class="visible-xs">
         <div class="col-xs-10 header-logo">
-          <img src="http://toplogos.ru/images/logo-bank-zenit.png" style="height:70px;">
+          <img src="assets/images/logo-bank-zenit.png" style="height:70px;">
         </div>
 
         <div class="col-xs-1">
@@ -53,7 +53,7 @@
             <button mat-menu-item>
               <span>КЛИЕНТ-БАНК</span>
             </button>
-            <button style="background-color: rgb(69, 175, 189);color:white" mat-menu-item>
+            <button style="background-color: rgb(0, 140, 153);color:white" mat-menu-item>
               <span>ИНТЕРНЕТ-БАНК</span>
             </button>
           </mat-menu>
