--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -25,6 +25,9 @@
 
 .img-wrap {
           position: relative;
+          height: 500px;
+          width: 100%;
+          /* background-color: red; */
 }
 
 .img-wrap #first-slide-content {
