--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -27,14 +27,14 @@
 .mat-button {
           font-size: medium;
           font-weight: bold;
-          color: rgb(69, 175, 189);
+          color: rgb(0, 140, 153);
           /* padding:5px; */
-          background-color: rgba(128, 128, 128, 0.1);
-          border-radius: 50px;
+          /* background-color: rgba(128, 128, 128, 0.1); */
+          /* border-radius: 50px; */
 }
 
 .mat-raised-button {
-          background-color: rgb(69, 175, 189);
+          background-color: rgb(0, 140, 153);
           color:white;
           box-shadow: 0;
           border-radius: 50px;
@@ -47,12 +47,12 @@
 
 .mat-raised-button:hover {
           background-color: transparent;
-          color:rgb(69, 175, 189);
+          color:rgb(0, 140, 153);
           box-shadow: 0;
           border-radius: 50px;
           height:50px;
           border: 2px solid;
-          border-color: rgb(69, 175, 189);
+          border-color: rgb(0, 140, 153);
           font-weight: bold;
           width: 150px;          
           box-shadow: none !important;
