--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,9 @@
     <div class="row">
       <div class="hidden-xs">
         <div class="col-sm-2 header-log">
-          <img src="assets/images/logo-bank-zenit.png" style="height:70px;">
+          <button mat-button (click)="gotoMain()">
+            <img src="assets/images/logo-bank-zenit.png" style="height:70px;">
+          </button>
         </div>
 
         <div class="col-sm-8 header-button" style="padding:0">
