--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,26 +1,24 @@
 .mat-raised-button {
           background-color: transparent;
-          color:rgb(69, 175, 189);
+          color:rgb(0, 140, 153);
           box-shadow: 0;
           border-radius: 50px;
           height:50px;
           border: 2px solid;
-          border-color: rgb(69, 175, 189);
+          border-color: rgb(0, 140, 153);
           font-weight: bold;
           width: 150px;          
-          box-shadow: none !important;
+          /* box-shadow: none !important; */
 }
 
 .mat-raised-button:hover {
-          background-color: rgb(69, 175, 189);
+          background-color: rgb(0, 140, 153);
           color:white;
           box-shadow: 0;
           border-radius: 50px;
           height:50px;
           width: 150px;
-          box-shadow: none !important;
-                    /* padding:5px; */
-          /* font-size: small; */
+          /* box-shadow: none !important; */
 }
 
 .img-wrap {
