--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,13 +5,6 @@
           /* width: 110%;         */
 }
 
-.header-logo { 
-          /* border: 1px solid; */
-          /* border-color: red; */
-          /* background: rgba(0, 170, 238, 0.5); */
-          
-}
-
 .header-button {
           margin-top: 30px;
           /* border: 1px solid; */
@@ -40,7 +33,7 @@
           border-radius: 50px;
           height:50px;
           width: 150px;
-          box-shadow: none !important;
+          /* box-shadow: none !important; */
                     /* padding:5px; */
           /* font-size: small; */
 }
@@ -55,7 +48,7 @@
           border-color: rgb(0, 140, 153);
           font-weight: bold;
           width: 150px;          
-          box-shadow: none !important;
+          /* box-shadow: none !important; */
 }
 
 .material-icons {
