--- a/src/app/deposit-details/deposit-details.component.html
+++ b/src/app/deposit-details/deposit-details.component.html
@@ -20,7 +20,7 @@
                 <P>Снятие</P>
             </div>
             <div class="col-sm-1">
-                <P>Капитал</P>
+                <P>Капитализация</P>
             </div>
             <div class="col-sm-2">
                 <P>Сроки вклада</P>
