--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,6 +2,25 @@
   <div class="container">
     <div class="row footer-content">
       <div class="col-sm-3">
+        <div style="margin-top:5px;width:100%">
+          <label style="width:100%">
+            Мобильный банк
+          </label>
+          <a class="footer-link-img footer-soc1" href="" target="_blank"></a>
+          <a class="footer-link-img footer-soc2" href="" target="_blank"></a>
+        </div>
+
+        <div style="margin-top:30px;width:100%">
+          <label style="width:100%">
+            Мы в социальных сетях
+          </label>
+          <a class="footer-link-img footer-soc3" href="" target="_blank"></a>
+          <a class="footer-link-img footer-soc4" href="" target="_blank"></a>
+          <a class="footer-link-img footer-soc5" href="" target="_blank"></a>
+        </div>
+
+        <div style="height:30px;width:100%"></div>
+
         <p style="font-weight:bolder">Головной офис Банка ЗЕНИТ</p>
         Россия, 129110, г. Москва, Банный пер., д. 9
 
@@ -15,19 +34,24 @@
         <p>Телефоны для консультаций по услугам для Юридических лиц:</p>
         <p>+7 (495) 777-57-04; 8 (800) 500-40-82</p>
         <p>Факс: +7 (495) 937-07-36, 777-57-06</p>
-        <p>Электронная почта: <a href="mailto:info@zenit.ru">info@zenit.ru</a></p>
-        <p><a href="https://www.zenit.ru/rus/about_bank/security_line/index.wbp" target="_blank">Линия доверия</a></p>
+        <p>Электронная почта:
+          <a href="mailto:info@zenit.ru">info@zenit.ru</a>
+        </p>
+        <p>
+          <a href="https://www.zenit.ru/rus/about_bank/security_line/index.wbp" target="_blank">Линия доверия</a>
+        </p>
       </div>
       <div class="col-sm-3">
-          <div>Генеральная лицензия ЦБ РФ на осуществление банковских операций №3255 от 16.12.2014</div>
-          <div style="margin-top:70%">
-              <a target="_blank" href="http://www.asv.org.ru/"><img height="80px" width="80px" src="/assets/images/footerLogoStrahovka.png">
-              </a>
-          </div>
+        <div>Генеральная лицензия ЦБ РФ на осуществление банковских операций №3255 от 16.12.2014</div>
+        <div style="margin-top:70%">
+          <a target="_blank" href="http://www.asv.org.ru/">
+            <img height="80px" width="80px" src="/assets/images/footerLogoStrahovka.png">
+          </a>
+        </div>
       </div>
       <div class="col-sm-3">
-          Для раскрытия информации в сети Интернет ПАО Банк ЗЕНИТ использует 
-          <a href="http://www.e-disclosure.ru/portal/company.aspx?id=538" target="_blank">страницу</a>, предоставленную агентством Интерфакс
+        Для раскрытия информации в сети Интернет ПАО Банк ЗЕНИТ использует
+        <a href="http://www.e-disclosure.ru/portal/company.aspx?id=538" target="_blank">страницу</a>, предоставленную агентством Интерфакс
       </div>
       <div class="col-sm-3">
         <div style="margin-top:100%">
