--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -63,7 +63,7 @@
         </div>
         <div class="row">
             <div class="footnote-text">
-                * Курсы валют указаны для головного офиса банка. В структурных подразделениях банка значения курсов иностранных валют могут
+                * Курсы валют указаны для головного офиса банка на 29.10.2017. В структурных подразделениях банка значения курсов иностранных валют могут
                 отличаться от значений, указанных для головного офиса. Курсы меняются в течение дня. Уточняйте информацию
                 у сотрудников банка по контактным телефонам структурных подразделений.
             </div>
@@ -72,7 +72,18 @@
         <div class="delimeter"></div>
         
         <div class="row">
-            ihujh
+            <div class="theme-text">Колебания курсов валют относительно российского рубля с 01 по 30 октября 2017 года *</div>
         </div>
+        <div class="row">
+            <p-chart type="line" [data]="data" ></p-chart>
+        </div>
+        <div class="row">
+            <div class="footnote-text">
+                * Курсы валют были получены с помощью генератора случайных чисел и не являются достоверными.
+            </div>
+        </div>
+
+        <div class="delimeter"></div>
+        
     </div>
 </div>
