--- a/src/app/deposit-details/deposit-details.component.css
+++ b/src/app/deposit-details/deposit-details.component.css
@@ -36,7 +36,7 @@
           border-color: rgb(0, 140, 153);
           font-weight: bold;
           width: 150px;          
-          box-shadow: none !important;
+          /* box-shadow: none !important; */
 }
 
 .back-button:hover {
@@ -45,7 +45,7 @@
           box-shadow: 0;
           border-radius: 50px;
           height:50px;
-          box-shadow: none !important;
+          /* box-shadow: none !important; */
           width: 150px;          
 }
 
@@ -56,7 +56,7 @@
           border-radius: 50px;
           height:50px;
           width: 200px;          
-          box-shadow: none !important;
+          /* box-shadow: none !important; */
 }
 
 .make-depo-button:hover {
@@ -69,5 +69,5 @@
           border-color: rgb(0, 140, 153);
           font-weight: bold;
           width: 200px;          
-          box-shadow: none !important;
+          /* box-shadow: none !important; */
 }
