--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="col-sm-2 ib-header-button">
-          <button color="primary" mat-raised-button>Интернет-банк</button>
+          <button color="primary" mat-raised-button (click)="gotoIbank()">Интернет-банк</button>
         </div>
       </div>
 
