--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -35,7 +35,7 @@
                 <ul class="table-row">
                     <li *ngFor="let c of currentExchangeRate | async">
                         <div class="col-xs-1" style="text-align:center">
-                            {{c.code}}
+                            {{c.code.toUpperCase()}}
                         </div>
 
                         <div class="col-xs-1" style="text-align:center">
